--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -13,6 +13,21 @@
     align-items: flex-start !important;
   }
 }
+
+::-webkit-scrollbar {
+  height: 8px;
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #fff;
+  border-radius: 15px;
+}
+
 body{
   background-color: #0f1016;
   min-width: 360px;
@@ -44,13 +59,11 @@ input{
   background-color: none;
   outline: none;
   border: none;
-  transition: 0.2s;
   min-width: 200px;
+  margin-left: 10px;
 }
 input:focus{
   outline: none;
-  border-bottom: orange 3px solid;
-  transition: 0.2s;
 }
 
 li{
@@ -76,6 +89,11 @@ label{
   margin: 0;
 }
 
+.container-page-trip{
+  padding: 60px 25px 0px 25px;
+  margin: 0;
+}
+
 .row-style{
   display: flex;
   flex-direction: row;
@@ -92,4 +110,33 @@ label{
 
 .element-end{
   align-items: flex-end;
+}
+
+.suggestions{
+  position: absolute;
+  top: 43px;
+  max-height: 200px;
+  padding: 5px;
+  background-color: white;
+  width: 78%;
+  border-radius: 6px;
+  opacity: 70%;
+  font-size: 12px;
+  overflow-y: auto;
+}
+
+.position-align-center{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.text-center{
+  text-align: center;
+}
+
+.temp-text{
+  color: white;
+  font-size: 50px;
+  font-weight: bold;
 }
